<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottomBarItemOne"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/SearchIcon_name"
        android:textAppearance="@style/TextAppearance.FontPath"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/bottomBarItemTwo"
        android:icon="@drawable/ic_crop_original_black_24dp"
        android:title="@string/ImageIcon_name"
        android:textAppearance="@style/TextAppearance.FontPath"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/bottomBarItemThree"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/MapIcon_name"
        android:textAppearance="@style/TextAppearance.FontPath"
        android:showAsAction="ifRoom|withText"/>
</menu>